--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 body{
     font-family: 'Roboto', sans-serif;
     margin: 0%;
+    padding-top: 0%;
 }
 
 /*----------------------HEADER-------------------*/
@@ -18,17 +19,18 @@ body{
 header{
     position: sticky;
     z-index: 500;
-    top:32px;
+    top: 25px;
     width: 100%;
+    padding-top: 0%;
 }
 .descBox{
     font-style: normal;
     font-weight: normal;
     position: absolute;
-    top: 0px;
+    top: -30px;
     left: 0px;
     width: 100%;
-    height: 32px;
+    height: 30px;
     background: var(--primary-color);
     font-size: 22px;
     color: #000000;
@@ -46,7 +48,7 @@ img{
     float: left;
     display: inline;
     margin-left: 0%;
-    width: 90px;
+    width: 80px;
     margin-bottom: 0%;
     margin-right: 20px;
 }
